--- a/implementation/.gitignore
+++ b/implementation/.gitignore
@@ -16,6 +16,7 @@ bin/
 gen/
 
 # Local configuration file (sdk path, etc)
+local.properties
 
 # Windows thumbnail db
 Thumbs.db
@@ -26,6 +27,7 @@ Thumbs.db
 # Android Studio
 *.iml
 .idea
+
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
