--- a/implementation/app/build.gradle
+++ b/implementation/app/build.gradle
@@ -46,3 +46,8 @@ repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     mavenCentral()
 }
+android {
+    defaultConfig {
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+}
